# aoc-haskell

./: .gitignore  Day01a.hs  Day01b.hs  Day02a.hs  Day02b.hs  Day03a.hs  Day03b.hs  Day04a.hs  Day05a.hs  Day06a.hs  README.md
2015/: Day01a.hs  Day01b.hs  Day02a.hs  Day02b.hs  Day03a.hs  Day03b.hs  Day04a.hs  Day04b.hs  Day05a.hs  Day05b.hs  Day06a.hs  Day06b.hs  Day08a.hs  Day08b.hs
2016/: Day01a.hs  Day02a.hs  Day02b.hs  Day03a.hs  Day03b.hs  Day04a.hs  Day04b.hs  Day05a.hs  Day06a.hs  Day06b.hs  Day07a.hs
2017/: Day01a.hs  Day01b.hs  Day02a.hs  Day02b.hs  Day03a.hs  Day03b.hs  Day04a.hs  Day04b.hs  Day05a.hs  Day05b.hs
2018/: Day01a.hs  Day01b.hs  Day02a.hs  Day02b.hs  Day03b.hs  Day05b.hs  Day06a.hs  Day07a.hs  Day08a.hs  Infi.hs
2019/Day01/: Day01a.hs
2019/Day02/: Day02.cabal  stack.yaml
2019/Day02/src/: PartOne.hs  PartTwo.hs
2019/Day03/: Day03.cabal
2019/Day03/src/: PartOne.hs
2019/Day04/: Day04.cabal
2019/Day04/src/: Main.hs  PartOne.hs  PartTwo.hs
2019/Day06/: Day06.cabal
2019/Day06/src/: Main.hs
Lib/: Matrix.hs
