name:                Day02
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Day02#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day02
  hs-source-dirs:      src
  main-is:             PartTwo.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2.3.3,
                       vector >= 0.12.0.3
