name:                Day04
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mark-gerarts/Day04#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Gerarts
maintainer:          mark.gerarts@gmail.com
copyright:           2019 Mark Gerarts
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day04
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
