name:                Day06
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mark-gerarts/Day06#readme
license:             BSD3
author:              Mark Gerarts
maintainer:          mark.gerarts@gmail.com
copyright:           2019 Mark Gerarts
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Day06
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2.3.3
